# locblog-api

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
api/: app.py  config.py  database.py  redis_db.py
api/admin/: admin.py
api/authentication/: __init__.py  authentication.py  utils.py
api/authentication/mail_templates/: register.html  register.txt
api/content/: __init__.py  content.py
api/create/: create.py
api/models/: users.py
