[tool.poetry]
name = "locblog-api"
version = "0.1.0"
description = ""
authors = ["LoC <loc@locrealloc.de>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-JWT-Extended = "^4.4.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
