[tool.poetry]
name = "locblog-api"
version = "0.1.0"
description = ""
authors = ["LoC <loc@locrealloc.de>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-JWT-Extended = "^4.4.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.3"
redis = "^4.3.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
aiohttp = "^3.8.1"
poethepoet = "^0.13.1"

[tool.poe.tasks]
black = "black ."

[tool.black]
target-version = ["py310"]
line-length = 120
skip-magic-trailing-comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
